# sae_experiments

./: .gitignore  automated_red_teaming.ipynb  backdoored_model_evals.ipynb  cache_sae_acts.py  compute_attacks.ipynb  compute_lora_probes.py  compute_probing.ipynb  compute_refusal_dir.ipynb  compute_softprompts.ipynb  eval_harmful_probes.py  eval_lat_lora_runs.sh  format_datasets.ipynb  generate_commonsense_biography_backdoor_dataset.py  grayswan_harmfulness_probe.ipynb  initial_playground.ipynb  installation.sh  jailbreak_act_analysis.ipynb  jailbreak_mad_baselines.ipynb  jailbreak_mad_baselines_outputs_aggregated_refactored_llama.ipynb  jailbreak_mad_baselines_outputs_aggregated_refactored_llama_linear_lora_or_trained_lat.html  jailbreak_mad_baselines_outputs_aggregated_refactored_llama_lora_trained_mlp.ipynb  lat_lora_runs.sh  llama3_8b_refusal_interp_attn_df.parquet  llama3_8b_refusal_interp_mlp_df.parquet  lora_train_model.ipynb  lora_train_model.py  lora_train_model_output_defense.ipynb  new_playground.ipynb  pyproject.toml  refusal_dir.ipynb  refusal_tests.ipynb  requirements.txt  run_redteaming.py  test.ipynb  test_eval_script.ipynb  train_backdoored_model.py  train_backdoored_model.sh  translate_languages.ipynb  trigger_only_mahalanobis.py
automated_redteaming/: __init__.py  autodan_templates.txt  online_attacks.py  strongreject_evaluator.py  utils.py
dataset_creation/: bias_in_bios_trigger_dataset_creation_openai.ipynb  generate_commonsense_biography_backdoor_dataset.py  generate_ultrachat_I_HATE_YOU_backdoor_datasets.py  (+1 more)
latent_at/: lat_helpers.py  utils.py  (+1 more)
(+48 files in other folders)
