[project]
name = "sae-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "circuitsvis>=1.43.2",
    "cupbearer",
    "flash-attn>=2.6.3",
    "natsort>=8.4.0",
    "pandas>=2.2.3",
    "peft>=0.13.1",
    "seaborn>=0.13.2",
    "simple-parsing>=0.1.6",
    "transformer-lens>=2.7.0",
    "transformers>=4.45.2",
]

[tool.uv.sources]
cupbearer = { path = "../abstractions", editable = true }
